:wrench: Replace hard-coded literals with centralized Symbol and Normal constants